<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="24dp"
    android:background="@drawable/home_item_bg"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingHorizontal="24dp"
    android:paddingVertical="12dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/weekly_mood_score"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:alpha=".6"
            android:fontFamily="@font/helvetica"
            android:text="@string/first_week_of_jan"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica_bold"
        android:text="@string/_3_1_5"
        android:textColor="@color/white"
        android:textSize="32sp" />
</LinearLayout>