<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/feeling_home_bottom_sheet_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <ImageView
            android:id="@+id/close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/close"
            android:hapticFeedbackEnabled="true"
            android:src="@drawable/ic_close" />
    </LinearLayout>

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/continue_new"
        android:src="@drawable/ic_premium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/sf_ui_text_bold"
        android:text="@string/upgrade_to_premium"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12dp"
        android:fontFamily="@font/sf_ui_text_regular"
        android:text="@string/affordable_self_care_for_a_healthier_you"
        android:textColor="#99FFFFFF"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="34dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:itemCount="6"
        tools:listitem="@layout/premium_card_item" />

    <com.example.sereno.core.design_system.CustomButton
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        app:background="@drawable/primary_button_rounded"
        app:size="normal"
        app:text="Subscribe for $9 / month" />
</LinearLayout>
