<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:background="@drawable/custom_sound_item_bg"
    android:orientation="horizontal"
    android:paddingHorizontal="8dp"
    android:paddingVertical="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:elevation="0dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/idPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/today"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_preview" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".5"
            android:background="@color/black" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/sf_ui_text_medium"
                android:text="@string/beach_wave"
                android:textColor="@color/white" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icVolume"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_volume_off" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:progressBackgroundTint="@color/primary"
            android:progressTint="@color/primary"
            android:thumbTint="@color/primary" />
    </LinearLayout>

</LinearLayout>