<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="24dp"
    android:layout_marginTop="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ripple_overlay"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/call"
                android:src="@drawable/ic_back" />

            <ImageView
                android:id="@+id/dp"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="12dp"
                android:src="@drawable/ai_ripple" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica"
                android:text="@string/john_ai_therapist"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha=".6"
                android:fontFamily="@font/helvetica"
                android:text="@string/online"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <FrameLayout
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:background="@drawable/dafult_ripple"
            android:clickable="true">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/call"
                android:src="@drawable/ic_call" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>