<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.onboarding.ui.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/full_grad" />

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sf_ui_text_regular"
                android:lineSpacingExtra="8dp"
                android:text="@string/onboarding_title"
                android:textColor="#DBFFFFFF"
                android:textSize="22sp" />

            <include
                android:id="@+id/volumeButton"
                layout="@layout/volume_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sf_ui_text_regular"
                android:lineHeight="22dp"
                android:text="@string/onboarding_sub_title"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:animateLayoutChanges="true"
                android:background="@drawable/volume_btn_bg"
                android:foreground="@drawable/ripple_overlay"
                android:gravity="center"
                android:paddingHorizontal="28dp"
                android:paddingVertical="15dp">

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/buttonContent"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="12dp"
                        android:contentDescription="@string/login"
                        android:src="@drawable/ic_google" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/sf_ui_text_medium"
                        android:text="@string/login_text"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="14dp"
                        android:layout_marginStart="12dp"
                        android:contentDescription="@string/login"
                        android:src="@drawable/ic_arrow_next" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>