<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="24dp"
    android:layout_marginTop="12dp"
    android:background="@drawable/home_item_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/state_of_mind"
            android:src="@drawable/ic_state_of_mind" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_text_bold"
            android:text="@string/state_of_mind"
            android:textColor="@color/cyan"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/_10dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_text_regular"
            android:text="@string/_1_04_am"
            android:textColor="@color/onSurfaceLight"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="@dimen/spacing_24dp"
            android:layout_height="@dimen/spacing_24dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_ui_text_medium"
                android:maxLines="2"
                android:text="@string/a_very_pleasant_moment"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/sf_ui_text_medium"
                    android:maxLines="2"
                    android:text="Joyful"
                    android:textColor="@color/onSurfaceLight"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_ui_text_medium"
                    android:maxLines="2"
                    android:text="●"
                    android:textColor="@color/onSurfaceLight"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/sf_ui_text_medium"
                    android:maxLines="2"
                    android:text="Self-care"
                    android:textColor="@color/onSurfaceLight"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/latestEmotion"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:contentDescription="@string/state_of_mind"
            android:src="@drawable/ic_happy" />
    </LinearLayout>
</LinearLayout>