<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".call.CallActivity">

    <ImageView
        android:id="@+id/talkingPerson"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/talking_person"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="40dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <include
                android:id="@+id/header"
                layout="@layout/call_header" />

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/callingLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica"
                android:text="@string/calling"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <include
                android:id="@+id/tapToInterrupt"
                layout="@layout/tap_to_interrupt" />

            <include
                android:id="@+id/bottomCallActions"
                layout="@layout/bottom_call_actions" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/permissionRational"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dialog_scrim"
            android:gravity="center"
            android:orientation="vertical"
            tools:visibility="gone">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_mic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/helvetica_bold"
                    android:text="@string/allow_mic_permission"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/helvetica"
                    android:gravity="center"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/microphone_access_is_required_to_join_the_therapy_call_session"
                    android:textColor="#CCFFFFFF"
                    android:textSize="16sp" />

                <include
                    android:id="@+id/allowButton"
                    layout="@layout/primary_button"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="33dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/icClose"
                android:layout_width="@dimen/spacing_24dp"
                android:layout_height="@dimen/spacing_24dp"
                android:layout_margin="24dp"
                android:src="@drawable/ic_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>